2015-03-10  Sam Weinig  <sam@webkit.org>

        Allow adding a button in input elements for auto fill related functionality
        <rdar://problem/19782066>
        https://bugs.webkit.org/show_bug.cgi?id=142564

        Reviewed by Anders Carlsson.

        - Adds new SPI to respond to clicks on the AutoFill button (both bundle and UIProcess).
        - Adds new SPI to enable/disable the display of the AutoFill button on an element.
        - Adds new SPI to get the bounds of the AutoFill button.
        - Updates spelling of AutoFill to be consistent.

        * UIProcess/API/APIUIClient.h:
        (API::UIClient::didClickAutoFillButton):
        * UIProcess/API/C/WKPage.cpp:
        (WKPageSetPageUIClient):
        * UIProcess/API/C/WKPageUIClient.h:
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::handleAutoFillButtonClick):
        * UIProcess/WebPageProxy.h:
        * UIProcess/WebPageProxy.messages.in:
        * WebProcess/InjectedBundle/API/APIInjectedBundlePageUIClient.h:
        (API::InjectedBundle::PageUIClient::didClickAutoFillButton):
        * WebProcess/InjectedBundle/InjectedBundlePageUIClient.cpp:
        (WebKit::InjectedBundlePageUIClient::didClickAutoFillButton):
        * WebProcess/InjectedBundle/InjectedBundlePageUIClient.h:
        * WebProcess/WebCoreSupport/WebChromeClient.cpp:
        (WebKit::WebChromeClient::handleAutoFillButtonClick):
        * WebProcess/WebCoreSupport/WebChromeClient.h:
        * WebProcess/InjectedBundle/API/c/WKBundlePageUIClient.h:
        Pipe the didClickAutoFillButton to the SPI layer.

        * WebProcess/InjectedBundle/API/Cocoa/WKWebProcessPlugInNodeHandle.mm:
        (-[WKWebProcessPlugInNodeHandle HTMLInputElementIsAutoFilled]):
        (-[WKWebProcessPlugInNodeHandle setHTMLInputElementIsAutoFilled:]):
        Update for new spelling of AutoFill.

        * WebProcess/InjectedBundle/API/c/WKBundleNodeHandlePrivate.h: